# cargo-begin

./: Cargo.toml  readme.md
src/: error.rs  main.rs
src/utils/: argument_parser.rs  mod.rs  template.rs  templates.rs
