[package]
name = "cargo-begin"
version = "1.1.2"
edition = "2021"
repository = "https://github.com/isothiazol/cargo-begin"
license = "Apache-2.0"
description = "A simple template project initializer."
readme = "readme.md"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
thiserror = "1.0.39"
